--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,38 +75,6 @@ article > .visual .copy .wrap .sm:after { width: 200px; height: 1px; margin-left
 .find-category .category-list ul li a:hover { background-color: #f7f9f9; transition-duration: 250ms; }
 .find-category .category-list ul li.active a { background-color: #05adb6; border-color: #05adb6; color: #fff; }
 
-/* 추천 초빙공고 */
-[class^=sec-] { padding: 3.2rem 0; position: relative; }
-[class^=sec-] .tit { margin-bottom: 1.875rem; display: flex; align-items: center; }
-[class^=sec-] .tit h3 { margin: 0 auto 0 0; font-size: 1.25rem; }
-[class^=sec-] .tit .more { margin: 0 0 0 auto; color: #6A7D7E; font-size: .875rem; }
-[class^=sec-] .tit .more:after { content: "\e82f"; font-family: unicons; display: inline-block; }
-[class^=sec-] .action-btn-group .btn-lg { padding: .8rem 6.25rem; }
-[class^=sec-] .job-list { margin: 0 -18px 8px; display: flex; flex-wrap: wrap; word-break: keep-all; }
-[class^=sec-] .job-list .box { width: calc(100% / 4 - 36px); margin: 0 18px 30px 18px; position: relative; }
-[class^=sec-] .job-list .box > .wrap { padding: 1.5rem; border: 1px solid #E7E7E7; border-radius: .7rem; box-sizing: border-box; }
-[class^=sec-] .job-list .box .badge { padding: .4em .7em; position: absolute; top: -10px; left: 10px; z-index: 8; }
-[class^=sec-] .job-list .box .thum { height: 140px; margin: -1.5rem -1.5rem .8rem -1.5rem; background-color: #fff; border-radius: .8rem .8rem 0 0; overflow: hidden; display: block; position: relative; }
-[class^=sec-] .job-list .box .thum img { width: 100%; height: 100%; object-fit: contain; position: absolute; top: 0; left: 0; padding: 20px; }
-[class^=sec-] .job-list .box:hover .thum img { transition-duration: 250ms; transform: scale(1.1); }
-[class^=sec-] .job-list .box ul { margin: 0; }
-[class^=sec-] .job-list .box ul li + li { margin-top: 3px; }
-[class^=sec-] .job-list .box ul .name { min-height: 18px; font-size: .75rem; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-break: break-all; }
-[class^=sec-] .job-list .box ul .cate { font-size: .75rem; color: #6A7D7E; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-break: break-all; }
-[class^=sec-] .job-list .box ul .subject { height: 44px; margin-bottom: 13px; font-size: 1.125rem; line-height: 1.3; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
-[class^=sec-] .job-list .box > .wrap:hover .subject a { text-decoration: underline !important; }
-[class^=sec-] .job-list .box ul .between { display: flex; }
-[class^=sec-] .job-list .box ul .between > div:nth-child(1) { margin-right: auto; }
-[class^=sec-] .job-list .box ul .between > div:nth-child(2) { margin-left: auto; }
-[class^=sec-] .job-list .box ul .district, .job-list .box ul .date { font-size: .75rem; color: #999999; }
-[class^=sec-] .job-list .box ul .dday { font-size: .75rem; color: #FF4F38; }
-[class^=sec-] .job-list.type-1 .box:hover { cursor: pointer; }
-[class^=sec-] .job-list.type-1 .box ul .name { color: #444444; }
-[class^=sec-] .job-list.type-1 .box.highlight > .wrap { border-color: #05AEB7; }
-[class^=sec-] .job-list.type-1 .box.highlight ul .subject { color: #04889D; }
-[class^=sec-] .job-list.type-2 .box > .wrap { background-color: #fff; border-color: #fff; }
-
-/* P.I 서비스 */
 section.sec-2 { padding: 6rem 0 3.6rem 0; background-color: #ECF4F4; }
 section.sec-2 .bg-text { font-size: calc(2rem + 2.7vw); margin-bottom: 1rem; color: rgba(255,255,255,.4); letter-spacing: 8px; text-align: center; }
 section.sec-2 .copy { margin-bottom: -20px; text-align: center; }
@@ -114,9 +82,8 @@ section.sec-2 .copy .lg { font-size: 2.25rem; letter-spacing: -1px; line-height:
 section.sec-2 .copy .sm { font-size: 1.125rem; }
 section.sec-2 .copy .lg + .sm { margin-top: 26px; }
 
-/* 빅데이터 채용트렌드 */
 .bigdata-trend .left { display: flex; flex-direction: column; }
-.bigdata-trend .left .btn { background-color: #f6f6f6; color: #888; }
+.bigdata-trend .left .btn { background-color: #f6f6f6; color: #888;  width: 120px !important; border-radius: 1em;}
 .bigdata-trend .left .btn + .btn { margin-top: .7rem; }
 .bigdata-trend .left .btn:hover, .bigdata-trend > div:nth-child(1) .btn:focus { background-color: #f1f1f1; transition-duration: 250ms; }
 .bigdata-trend .left .btn.active { background-color: #05adb6; color: #fff; cursor: default; }
@@ -135,34 +102,6 @@ section.sec-2 .copy .lg + .sm { margin-top: 26px; }
 .bigdata-trend .right .wrap .rank .state li .uil-arrow-down { color: #46a7f6; }
 .bigdata-trend .date { margin: -25px 0 10px 0; display: flex; }
 .bigdata-trend .date span { margin-left: auto; color: #999; font-size: .875rem; }
-
-/* 해시태그 */
-section.sec-4 { background-color: #F1F1F1; }
-section.sec-4 .hashtag-list { position: relative; }
-section.sec-4 .hashtag-list .slider { margin: 0 -10px; }
-section.sec-4 .hashtag-list .slider .slick-slide { margin: 0 10px; }
-section.sec-4 .hashtag-list .slider .slick-slide a { width: 100%; height: 100%; background-color: #fff; border: 1px solid #fff; border-radius: 200px; overflow: hidden; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; display: flex; align-items: center; justify-content: center; position:relative; }
-section.sec-4 .hashtag-list .slider .slick-slide a:after { padding-bottom: 100%; content: ""; display: block; }
-section.sec-4 .hashtag-list .slider .slick-slide a span { font-size: 1.125rem; color: #6A7D7E; position: relative; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-break: break-all; }
-section.sec-4 .hashtag-list .slider .slick-slide a:hover { border-color: #05adb6; transition-duration: 250ms; }
-section.sec-4 .hashtag-list .slider .slick-slide a:hover span { color: #05adb6; transition-duration: 250ms; transform: scale(1.1); }
-section.sec-4 .hashtag-list .slider .slick-prev { top: -41px; left: auto; right: 49px; }
-section.sec-4 .hashtag-list .slider .slick-next { top: -41px; right: 11px; }
-
-/* 컨설턴트 한마디 */
-section.sec-5 { padding-bottom: 0; }
-section.sec-5 .counsel-list { display: flex; flex-direction: column; }
-section.sec-5 .counsel-list .wrap { margin: 0 -18px; display: flex; flex-wrap: wrap; }
-section.sec-5 .counsel-list .box { width: calc(100% / 3 - 36px); margin: 0 18px 30px 18px; }
-section.sec-5 .counsel-list .box:hover { cursor: pointer; }
-section.sec-5 .counsel-list .box:hover .thum img { transition-duration: 250ms; transform: scale(1.1); }
-section.sec-5 .counsel-list .box:hover ul li { text-decoration: underline; }
-section.sec-5 .counsel-list .box .thum { height: 200px; margin: 0 0 20px 0; background-color: #fff; border: 1px solid #E7E7E7; border-radius: .7rem; overflow: hidden; display: block; position: relative; }
-section.sec-5 .counsel-list .box .thum img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; }
-section.sec-5 .counsel-list .box ul .subject strong { height: 24px; font-size: 1.125rem; font-weight: 500; line-height: 1.3; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-break: break-all; }
-section.sec-5 .counsel-list .box ul .synop { height: 42px; margin-top: 13px; color: #444444; font-size: .875rem; line-height: 1.5; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; word-break: break-all; }
-section.sec-5 .counsel-list .box ul .subject .badge { margin-bottom: 6px; }
-section.sec-5 .counsel-list .box ul .subject .badge-soft-danger { background-color: rgba(252,137,73,.2); color: #FC8949; }
 
 /* 팝업레이어 */
 .layer-popup { width: 520px; background-color: #fff; border-radius: .8rem .8rem 0 0; box-shadow: rgba(13, 38, 76, 0.19) 0px 9px 20px; position: absolute; top: 80px; z-index: 590; }
