--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+#map {
+  width: 100%;
+  height: 90vh;
+}
 article > .container {
   margin: 3rem auto 1.5rem auto;
 }
@@ -5452,7 +5456,7 @@ article > .container {
   width: 60px;
   height: 34px;
   vertical-align: middle;
-  z-index: 9999;
+  z-index: 5000;
   right: 10px;
   bottom: 0px;
 }
@@ -5537,4 +5541,28 @@ p {
 
 .ol-overlay button {
   margin-right: 5px;
+}
+
+#update-overlay {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid #ccc;
+  padding: 5px;
+  font-size: 12px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  display: none; /* 처음에는 숨깁니다. */
+}
+
+#insert-overlay {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid #ccc;
+  padding: 5px;
+  font-size: 12px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  display: none; /* 처음에는 숨깁니다. */
+}
+
+#searchText {
+  margin-top: 20px;
 }
