--- a/android/app/src/main/assets/assets/css/style.css
+++ b/android/app/src/main/assets/assets/css/style.css
@@ -5531,3 +5531,19 @@ p {
   height: 45px;
   margin-right: 20px;
 }
+
+/* CSS 파일 또는 <style> 태그 내부에 추가 */
+.arrow-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999; /* 필요한 경우 레이어의 우선순위 조절 */
+}
+
+/* 화살표 이미지에 대한 스타일 설정 (예시) */
+#arrow {
+  width: 20px;
+  height: 20px;
+  transition: transform 0.2s ease-in-out;
+}
