feat : 1차 배포본 개발 완료

--- a/android/app/src/main/assets/assets/css/common.css
+++ b/android/app/src/main/assets/assets/css/common.css
@@ -51,10 +51,11 @@ select {
   margin-right: auto;
 }
 .header .logo a {
-  width: 151px;
+  width: 100px;
   height: 25px;
   background-size: contain;
   display: block;
+  background: url(../images/logo.png) top left no-repeat;
 }
 .header .gnb > ul {
   margin: 0;
