--- a/android/app/src/main/assets/assets/css/style.css
+++ b/android/app/src/main/assets/assets/css/style.css
@@ -6568,3 +6568,7 @@ p {
   content: "\00d7";
   font-size: 15pt;
 }
+
+.ol-compass {
+  background: url(../images/tool_sprite.png) no-repeat 0 0 !important;
+}
