fix : 로고 변경 및 배경지도 선택 추가

--- a/android/app/src/main/assets/assets/css/common.css
+++ b/android/app/src/main/assets/assets/css/common.css
@@ -57,6 +57,16 @@ select {
   display: block;
   background: url(../images/logo.png) top left no-repeat;
 }
+.header .logo .logo_2 {
+  width: 100px;
+  height: 25px;
+  display: block;
+  background: url(../images/logo_2.png) top left no-repeat;
+  position: absolute;
+  top: 17px;
+  left: 100px;
+  background-size: contain;
+}
 .header .gnb > ul {
   margin: 0;
   text-align: center;
