--- a/android/app/src/main/assets/assets/css/login.css
+++ b/android/app/src/main/assets/assets/css/login.css
@@ -24,21 +24,32 @@ article .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 75px;
+  margin-top: 30px;
 }
 .login .form-area {
   width: 80%;
 }
 .login .form-area .logo {
-  width: 345px;
-  height: 110px;
+  width: 200px;
+  height: 80px;
   margin-bottom: 4rem;
   font-size: 30px;
   background: url('../images/logo.png') top left no-repeat;
   background-size: 200px;
-  margin: 20px auto;
-  margin-left: 35px;
+  margin: 0 auto;
+  margin-left: 20px;
 }
+.login .form-area .logo_2 {
+  width: 200px;
+  height: 50px;
+  margin-bottom: 4rem;
+  font-size: 30px;
+  background: url('../images/logo_2.png') top left no-repeat;
+  background-size: 200px;
+  margin: 0 auto;
+  margin-left: 20px;
+}
+
 .login .form-area .tit {
   margin-bottom: 1.375rem;
   font-size: 1.625rem;
